# vid-grpc-buf

./: .gitignore  README.md  buf.gen.yaml  pyproject.toml
proto/: api.proto
src/grpc_buf/: __init__.py  main.py
